Cropped image and fixed error where map disappearred

--- a/style.css
+++ b/style.css
@@ -484,9 +484,30 @@ li {
 }
 
 /* SINGLE VENUE PAGE STYLING */
+#thisVenueBody {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #title-single {
     margin-top: 100px;
     font-family: 'Georgia', 'Helvetica', 'Arial';
+}
+
+#singleVenueImage {
+    height: 500px;
+    width: 80%;
+    overflow: hidden;
+    position: relative; 
+}
+
+.singleMainImage {
+    width: 100%;
+    object-fit: cover;
+    position: absolute; 
+    top: 50%; 
+    transform: translateY(-50%); /
 }
 
 #bookingSubheading {
@@ -644,6 +665,7 @@ li {
 
 #locationMap {
     height: 100%;
+    min-width: 300px;
     max-width: 400px;
     min-height: 300px;
 }
